test(ApplicationTest): add test codes